--- a/app/views/games/new.html.erb
+++ b/app/views/games/new.html.erb
@@ -1,7 +1,7 @@
 <h1>New Game</h1>
 <div class="row">
   <% @letters.each do |letter| %>
-    <p class="letter-box mx-3"><%= letter %></p>
+    <li class="letter-box mx-3"><%= letter %></li>
   <% end %>
 </div>
 
